Proje temizliği: 18.02.2026.py tek kaynak olarak ayarlandı
- Eski proje dosyaları silindi (scanner, trader, portfolio, backtest)
- Tüm modüller 18.02.2026.py stratejisinden import ediyor
- Binance Futures uyumlu (Bybit referansları kaldırıldı)
- Northflank deployment hazır (Docker, .dockerignore, .env.sample)
- TP1/TP2/TP3 sistemi kaldırıldı  SL/BE/TSL ile dinamik çıkış
- Redis cache opsiyonel (replay için)
- Config REDIS_URL desteği eklendi

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,80 @@
-__pycache__/
-*.pyc
-.venv/
-.vscode/
-.envS
+# ==============================================================================
+# Git Ignore - Pump & Dump Reversion Bot
+# ==============================================================================
 
-# API Configuration (contains sensitive data)
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg
+*.egg-info/
+dist/
+build/
+pip-log.txt
+pip-delete-this-directory.txt
+.pytest_cache/
+.mypy_cache/
+.coverage
+htmlcov/
+*.cover
+
+# Virtual Environments
+.venv/
+venv/
+ENV/
+env/
+.virtualenv/
+
+# Environment & Secrets - ÇOK ÖNEMLİ!
+.env
+.env.local
+.env.*.local
 config.py
+secrets/
+*.key
+*.pem
+
+# IDE & Editors
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Logs & Data
+logs/
+*.log
+*.sqlite
+*.db
+dump.rdb
+
+# Backtest Results
+backtest_trades.csv
+backtest_positions.csv
+backtest_results.log
+temp_backtest_data/
+backtest_data/
+*.csv
+
+# Recovery & Backup
+recovery/
+backup/
+*.bak
+
+# OS Files
+Thumbs.db
+desktop.ini
+.DS_Store
+
+# Agent & Temp
+.agent/
+tmp/
+temp/
+
+# Docker (optional - Northflank builds'de kullanılabilir)
+# .dockerignore
+# docker-compose.override.yml
+
